[package]
name = "esp32_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

resolver = "2"

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 2

[dependencies]
embedded-hal = "0.2.3"
embassy-executor = { version = "0.2.0", package = "embassy-executor", features = [
    "nightly",
    "executor-thread",
    "integrated-timers",
    "pender-callback",
    "arch-xtensa",
] }
smoltcp = { version = "0.9.1", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
    "dns-max-server-count-3",
] }
embedded-io = "0.4.0"
log = "0.4.19"
esp32-hal = { version = "0.12.0", features = ["rt", "async", "embassy"] }
esp-println = { version = "0.5.0", features = ["esp32", "log"] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
embedded-svc = { version = "0.25.0", default-features = false }
atoi = { version = "2.0.0", default-features = false }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "f80df63", features = [
    "esp32",
    "embedded-svc",
    "embassy-net",
    "wifi",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = [
    "nightly",
] }

[patch."https://github.com/embassy-rs/embassy"]
embassy-net = { path = "../embassy/embassy-net" }
embassy-net-driver = { path = "../embassy/embassy-net-driver" }
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-time = { path = "../embassy/embassy-time" }

[patch.crates-io]
embassy-executor = { path = "../embassy/embassy-executor" }

[patch."https://github.com/esp-rs/esp-wifi"]
esp-wifi = { path = "../esp-wifi/esp-wifi" }
